--- a/Bootstrap/Startup_project/style.css
+++ b/Bootstrap/Startup_project/style.css
@@ -15,9 +15,31 @@ h1 {
   color: #e2dbdb;
 }
 
+hr {
+  border-color: #ee4b08;
+  border-width: 3px;
+  max-width: 65px;
+}
+
+.buffer {
+  height: 10rem;
+}
+
 .btn {
   font-weight: 700;
   border-radius: 300px;
+  text-transform: uppercase;
+}
+
+.btn-primary {
+  background-color:rgb(241, 142, 106);
+  border-color: rgb(241, 142, 106);
+}
+
+.btn-primary:hover {
+  background-color: #ee4b08;
+  border-color: #ee4b08;
+  border-width: 4px;
 }
 
 .btn-xl {
